--- a/JavaApplication7/src/view/FrmMain.form
+++ b/JavaApplication7/src/view/FrmMain.form
@@ -284,8 +284,11 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/images/icons8_settings_25px.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="C&#xe0;i &#x111;&#x1eb7;t"/>
+                <Property name="text" type="java.lang.String" value="Copyright by Thuyetbn"/>
                 <Property name="borderPainted" type="boolean" value="false"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Tahoma" size="12" style="1"/>
+                </Property>
                 <Property name="horizontalAlignment" type="int" value="2"/>
               </Properties>
               <Events>
